# overlay-translator

./: .gitattributes  CONTRIBUTING.md  NOTICE  README.en.md  README.md  settings.gradle.kts
.github/workflows/: ci.yml  codeql.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/gameocr/app/overlay/: OverlayActionModeHostSmokeTest.kt
app/src/androidTest/java/com/gameocr/app/tts/: SystemTtsAvailabilitySmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hy_mt_license.txt  sakura_notice.txt  third_party_notices.txt
app/src/main/java/com/gameocr/app/: GameOcrApp.kt
app/src/main/java/com/gameocr/app/appcontext/: ForegroundAppResolver.kt  InstalledAppCatalog.kt
app/src/main/java/com/gameocr/app/capture/: CaptureGeometryDiagnostics.kt  FloatingWindowCapturePolicy.kt  LatestFrameAwaiter.kt  LoopFrameChangePolicy.kt  LoopFrameFingerprintFactory.kt  LoopFrameStabilityPolicy.kt  LoopOcrTextStabilityPolicy.kt  LoopRoiStabilityPolicy.kt  LoopRoiVisualPolicy.kt  LoopRuntimePolicy.kt  LoopTextRoiPolicy.kt  MediaProjectionCaptureConfig.kt  MediaProjectionScreenshotter.kt  RegionPickerActivity.kt  RegionPickerView.kt  RegionSizeLabelPlacementPolicy.kt  ShizukuRawScreencapDecoder.kt  ShizukuScreenshotter.kt
app/src/main/java/com/gameocr/app/data/: CrashRecorder.kt  LogRepository.kt  MangaOcrAdvancedSettingsPolicy.kt  OverlayFontManager.kt  OverlayFontPolicy.kt  OverlayTextStyle.kt  Settings.kt  SettingsBundleTransfer.kt  SettingsFieldPolicy.kt  SettingsRepository.kt  SettingsSecretCipher.kt  SettingsSecretCodec.kt  SharePromptPolicy.kt  TranslationLanguagePairPolicy.kt  TranslationOutputSettingsPolicy.kt  TranslationPresetTransfer.kt
app/src/main/java/com/gameocr/app/di/: AppModule.kt  PrivateCleartextInterceptor.kt
app/src/main/java/com/gameocr/app/download/: ModelDownloadManager.kt  ModelDownloadSpec.kt  ModelDownloadWorker.kt
app/src/main/java/com/gameocr/app/glossary/: TranslationContextResolver.kt  TranslationGlossary.kt
app/src/main/java/com/gameocr/app/llm/: LlamaEngineHolder.kt  LlamaMultiSequence.kt  LlamaPromptMetrics.kt  LlmModelInstaller.kt  LlmModelKind.kt  LlmModelNotReadyException.kt  LocalLlmAccelerationPolicy.kt  LocalLlmSamplingPolicy.kt  LocalLlmThreadPolicy.kt
app/src/main/java/com/gameocr/app/ocr/: BaiduOcrEngine.kt  BubbleClusterer.kt  ChineseVerticalFallbackPolicy.kt  DBPostprocessor.kt  LunaOcrEngine.kt  MangaOcrEngine.kt  MangaOcrModelInstaller.kt  MangaOcrNoiseFilter.kt  MangaOcrQuadFusion.kt  MangaOcrStartupPolicy.kt  MangaOcrTiling.kt  MangaOcrTracePolicy.kt  MlKitOcrEngine.kt  OcrLanguageCapability.kt  OcrResultQuality.kt  OrientationClassifier.kt  OrientationModelInstaller.kt  OrientationRouting.kt  PaddleAiStudioOcrEngine.kt  PaddleDetectionSizing.kt  PaddleDocOriClassifier.kt  PaddleModelInstaller.kt  PaddleOcrEngine.kt  PaddleQuadDeduplicator.kt  PaddleTextLineOrientationClassifier.kt  RenderOrientationResolver.kt  RotationGeometry.kt  RoutingOcrEngine.kt  TencentOcrEngine.kt  TextBlock.kt  TextBlockReadingOrder.kt  TranslationOutputOrientationPolicy.kt  UmiOcrEngine.kt
app/src/main/java/com/gameocr/app/onboarding/: FloatingTourRerunPolicy.kt  OnboardingModels.kt  OnboardingPrefs.kt  OnboardingScreen.kt  OnboardingViewModel.kt
app/src/main/java/com/gameocr/app/overlay/: AdaptiveEraseDrawable.kt  AdaptiveOverlayStyle.kt  DictionarySelectableText.kt  DraggableOverlayWindow.kt  EdgeInsetPreviewOverlay.kt  FloatingButtonManager.kt  FloatingLongPressCueOverlay.kt  FloatingMenuTourOverlay.kt  FloatingMenuTourPalette.kt  FloatingMenuTourPolicy.kt  FloatingMenuTourPrefs.kt  FloatingMenuTourSkipPolicy.kt  FloatingWindowTextContent.kt  HorizontalRtlText.kt  LanguageQuickSwitchOverlay.kt  LatestFrameUpdateCoalescer.kt  LiquidFloatingContainer.kt  LongPressGuideView.kt  LoopProgressView.kt  MenuItemRegistry.kt  OcrDebugBoxLabelFormatter.kt  OverlayAccessibilityLabels.kt  OverlayManager.kt  OverlayWindowGeometryPolicy.kt  PresetQuickSwitchOverlay.kt  RegionPickerOverlay.kt  SelectionSpeechAction.kt  SelectionSpeechPolicy.kt  StyledTranslationTextView.kt  TranslationBlockCopyOverlay.kt  TranslationBlockCopyPolicy.kt  TranslationBlockInteractionPolicy.kt  TranslationCardLayoutPolicy.kt  TranslationCardOverlay.kt  TranslationCardSpeechPolicy.kt  TtsPlaybackAction.kt  TtsPlaybackButtonBinding.kt  VerticalOverlayLayout.kt  VerticalTextDrawer.kt  VerticalTextLayout.kt  (+2 more)
app/src/main/java/com/gameocr/app/service/: BitmapCaptureDiagnostics.kt  CaptureFrameDebugDump.kt  CaptureService.kt  DeveloperOcrDebugPolicy.kt  TranslationBatchGate.kt  TranslationLogElapsedPolicy.kt  TranslationOutputPolicy.kt
app/src/main/java/com/gameocr/app/shizuku/: ShizukuCapabilities.kt  ShizukuManager.kt
app/src/main/java/com/gameocr/app/translate/: AnthropicApi.kt  AnthropicTranslator.kt  BaiduFanyiTranslator.kt  ChineseScriptNormalizer.kt  CrossLineContextTranslation.kt  DeepLTranslator.kt  GoogleTranslator.kt  HyMt2Translator.kt  LocalLlamaTranslationCacheKey.kt  LocalLlamaTranslator.kt  LocalLlmNativeBatchPolicy.kt  LocalLlmPrewarmPolicy.kt  (+13 more)
app/src/main/res/drawable/: bg_arc_menu_item.xml  bg_arc_menu_item_active.xml  ic_drag_handle.xml  ic_launcher_foreground.xml  ic_menu_full_screen.xml  ic_menu_language_pair.xml  ic_menu_next_page.xml  ic_menu_preset.xml  ic_menu_region.xml  ic_menu_settings.xml  ic_menu_word_select.xml  ic_overlay_button_loop.xml  ic_overlay_button_word.xml
app/src/main/res/values/: ids.xml  strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: a11y_config.xml  log_file_paths.xml  network_security_config.xml
gradle/: libs.versions.toml
llama-android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
llama-android/src/main/cpp/: CMakeLists.txt  llama_multi_sequence.inc  llama_thread_policy.cpp
llama-android/src/main/cpp/cmake/: cmake-with-ninja.cmd.in  vulkan-host-toolchain.cmake.in
llama-android/src/main/cpp/cmake/SPIRV-Headers/: SPIRV-HeadersConfig.cmake
tools/perfetto/: manga_ocr_cpu.pbtxt
(+237 files in other folders)
